--- a/StickyNotes.Web/Views/Notas/Index.cshtml
+++ b/StickyNotes.Web/Views/Notas/Index.cshtml
@@ -66,7 +66,7 @@
     }
 
     .note-footer {
-        margin-top: auto; /* 🔥 asegura que el footer no se salga */
+        margin-top: auto;
         font-size: 0.8rem;
         display: flex;
         justify-content: space-between;
